--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^2.1.0",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.6.0",
     "react-map-gl": "^8.0.4",
